Share packaged SDK qualification launch settings