@@ -28,14 +28,7 @@ final class PackagedSkyPilotTlsIT {
 		try (var api = SkyPilotApiServerFixture.start();
 				var proxy = new HeldSkyPilotProxy(api.endpoint(), server.context())) {
 			var log = repository.resolve("backend/target/service-logs/" + mode + "-tls-qualification.log");
-			var builder = new ProcessBuilder("java", "--enable-native-access=ALL-UNNAMED",
-					"--sun-misc-unsafe-memory-access=allow", "-Xss16m",
-					"-Dgraalpy.external.directory=" + System.getProperty("graalpy.external.directory"),
-					"-Dloader.main=de.zorro909.skywright.backend.orchestration.OrchestratorQualificationMain", "-cp",
-					System.getProperty("backend.executable"),
-					"org.springframework.boot.loader.launch.PropertiesLauncher", "tls-rejected");
-			builder.directory(repository.toFile());
-			builder.environment().put("SKYWRIGHT_SKYPILOT_BRIDGE_API_SERVER_ENDPOINT", proxy.endpoint().toString());
+			var builder = PackagedSkyPilotFixture.process("tls-rejected", proxy.endpoint());
 			trust.configureTrust(builder);
 			var process = builder.redirectErrorStream(true).redirectOutput(log.toFile()).start();
 			try {
